[gd_scene load_steps=37 format=3 uid="uid://dpyi27wp7jgdd"]

[ext_resource type="Script" uid="uid://breka23xsnydt" path="res://objects/knight/knight.gd" id="1_xnh7u"]
[ext_resource type="Texture2D" uid="uid://cr1vttptgsmo0" path="res://assets/knight_idle.png" id="2_nu1vt"]
[ext_resource type="Texture2D" uid="uid://dyj3d4g2cgiw6" path="res://assets/knight_running.png" id="3_7wnhg"]
[ext_resource type="Texture2D" uid="uid://711sd6pj8adh" path="res://assets/knight_roll.png" id="3_iynps"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7wnhg"]
atlas = ExtResource("2_nu1vt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iynps"]
atlas = ExtResource("2_nu1vt")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vveg4"]
atlas = ExtResource("2_nu1vt")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j06qx"]
atlas = ExtResource("2_nu1vt")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4iel"]
atlas = ExtResource("2_nu1vt")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g752n"]
atlas = ExtResource("2_nu1vt")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8e5b"]
atlas = ExtResource("2_nu1vt")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed5sq"]
atlas = ExtResource("3_iynps")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua8iq"]
atlas = ExtResource("3_iynps")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7auhv"]
atlas = ExtResource("3_iynps")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjjkh"]
atlas = ExtResource("3_iynps")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm6dt"]
atlas = ExtResource("3_iynps")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayg18"]
atlas = ExtResource("3_iynps")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g4fa"]
atlas = ExtResource("3_iynps")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ycyb"]
atlas = ExtResource("3_iynps")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2ab0"]
atlas = ExtResource("3_iynps")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc4kn"]
atlas = ExtResource("3_iynps")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7iog"]
atlas = ExtResource("3_iynps")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x303"]
atlas = ExtResource("3_iynps")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2an3b"]
atlas = ExtResource("3_7wnhg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dvf4"]
atlas = ExtResource("3_7wnhg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2har"]
atlas = ExtResource("3_7wnhg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x56xw"]
atlas = ExtResource("3_7wnhg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrj1b"]
atlas = ExtResource("3_7wnhg")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ni8j"]
atlas = ExtResource("3_7wnhg")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24l7c"]
atlas = ExtResource("3_7wnhg")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2dq7"]
atlas = ExtResource("3_7wnhg")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2an3b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wnhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iynps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vveg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j06qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4iel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g752n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8e5b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed5sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua8iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7auhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjjkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm6dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayg18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g4fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ycyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2ab0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc4kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7iog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x303")
}],
"loop": false,
"name": &"roll",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2an3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dvf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2har")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x56xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrj1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ni8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24l7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2dq7")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wu7s"]
size = Vector2(22, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vveg4"]
size = Vector2(22, 31.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2iyq"]
size = Vector2(21, 41.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iynps"]
size = Vector2(21, 30.75)

[node name="Knight" type="CharacterBody2D"]
script = ExtResource("1_xnh7u")

[node name="KnightSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_2an3b")
animation = &"roll"
frame = 5

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_1wu7s")

[node name="RollHitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_vveg4")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="CoyoteFrameTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RollCooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HurtBox" type="Area2D" parent="." groups=["knight_hurtbox"]]
collision_mask = 6

[node name="BaseHurtbox" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 5.625)
shape = SubResource("RectangleShape2D_o2iyq")
debug_color = Color(0.9874309, 0, 0.31808007, 0.41960785)

[node name="RollHurtbox" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_iynps")
disabled = true
debug_color = Color(0.9601919, 0.092107065, 0.4524278, 0.41960785)

[node name="RollStartTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_finished" from="KnightSprite" to="." method="_on_knight_sprite_animation_finished"]
[connection signal="timeout" from="CoyoteFrameTimer" to="." method="_on_coyote_frame_timer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
[connection signal="timeout" from="RollStartTimer" to="." method="_on_roll_start_timer_timeout"]
